bin/testsuite/tests/compiler/src/errors/compiler513.swg
#global testerror "Err0308"
#test
{
	var a: ... = 0
}
